Set body and html background to fix scroll flicker in dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -27,6 +27,14 @@
     
   }
 
+  html.dark body {
+    @apply bg-primary;
+  }
+
+  html.light body {
+    @apply bg-white
+  }
+
   h1 {
     @apply mx-auto max-w-4xl text-center text-5xl font-bold leading-tight tracking-[-1%] sm:text-[64px] sm:leading-[76px];
   }
